--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -155,7 +155,7 @@ jobs:
         working-directory: control-plane
         run: |
             PACKAGE_NAMES=$(go list ./...)
-            gotestsum --junitfile ${{env.TEST_RESULTS}}/gotestsum-report.xml -- -p 4 $PACKAGE_NAMES
+            GOMAXPROCS=8 gotestsum --junitfile ${{env.TEST_RESULTS}}/gotestsum-report.xml -- -p 4 $PACKAGE_NAMES
 
   test-enterprise-control-plane:
     if: github.repository_owner == 'hashicorp' # Do not run on forks as this requires secrets
@@ -204,7 +204,7 @@ jobs:
         working-directory: control-plane
         run: |
             PACKAGE_NAMES=$(go list ./...)
-            gotestsum --junitfile ${{env.TEST_RESULTS}}/gotestsum-report.xml -- -tags=enterprise -p 4 $PACKAGE_NAMES
+            GOMAXPROCS=8 gotestsum --junitfile ${{env.TEST_RESULTS}}/gotestsum-report.xml -- -tags=enterprise -p 4 $PACKAGE_NAMES
 
   build-distros:
     needs: [get-go-version, test-control-plane, test-enterprise-control-plane]
