--- a/control-plane/Makefile
+++ b/control-plane/Makefile
@@ -53,28 +53,28 @@ endif
 
 # In Github Actions, the linux binary will be attached from a previous step at pkg/bin/linux_amd64/. This make target
 # should only run in CI and not locally.
-ci.dev-docker-github:
-	@echo "Building consul-k8s Development container - $(CI_DEV_DOCKER_IMAGE_NAME)"
-	@echo $(DOCKER_PASS) | docker login -u="$(DOCKER_USER)" --password-stdin
-	@docker buildx build -t '$(CI_DEV_DOCKER_NAMESPACE)/$(CI_DEV_DOCKER_IMAGE_NAME):$(GIT_COMMIT)' \
-	--platform linux/amd64,linux/arm64 \
-	--target=dev \
-	--push \
-	--label COMMIT_SHA=$(GITHUB_SHA) \
-	--label PULL_REQUEST=$(GITHIB_PULL_REQUEST) \
-	--label GITHUB_BUILD_URL=$(GITHUB_SERVER_URL)/$(GITHUB_REPOSITORY)/actions/runs/$(GITHUB_RUN_ID) \
-	$(CI_DEV_DOCKER_WORKDIR) -f $(CURDIR)/Dockerfile
-	@echo "Pushed dev image to: $(CI_DEV_DOCKER_NAMESPACE)/$(CI_DEV_DOCKER_IMAGE_NAME):$(GIT_COMMIT)"
-ifeq ($(GITHUB_REF_NAME), main)
-	@docker buildx build -t '$(CI_DEV_DOCKER_NAMESPACE)/$(CI_DEV_DOCKER_IMAGE_NAME):latest' \
-	--platform linux/amd64,linux/arm64 \
-	--target=dev \
-	--push \
-	--label COMMIT_SHA=$(GITHUB_SHA) \
-	--label PULL_REQUEST=$(GITHIB_PULL_REQUEST) \
-	--label GITHUB_BUILD_URL=$(GITHUB_SERVER_URL)/$(GITHUB_REPOSITORY)/actions/runs/$(GITHUB_RUN_ID) \
-	$(CI_DEV_DOCKER_WORKDIR) -f $(CURDIR)/Dockerfile
-	@echo "Pushed dev image to: $(CI_DEV_DOCKER_NAMESPACE)/$(CI_DEV_DOCKER_IMAGE_NAME):latest"
-endif
+#ci.dev-docker-github:
+#	@echo "Building consul-k8s Development container - $(CI_DEV_DOCKER_IMAGE_NAME)"
+#	@echo $(DOCKER_PASS) | docker login -u="$(DOCKER_USER)" --password-stdin
+#	@docker buildx build -t '$(CI_DEV_DOCKER_NAMESPACE)/$(CI_DEV_DOCKER_IMAGE_NAME):$(GIT_COMMIT)' \
+#	--platform linux/amd64,linux/arm64 \
+#	--target=dev \
+#	--push \
+#	--label COMMIT_SHA=$(GITHUB_SHA) \
+#	--label PULL_REQUEST=$(GITHIB_PULL_REQUEST) \
+#	--label GITHUB_BUILD_URL=$(GITHUB_SERVER_URL)/$(GITHUB_REPOSITORY)/actions/runs/$(GITHUB_RUN_ID) \
+#	$(CI_DEV_DOCKER_WORKDIR) -f $(CURDIR)/Dockerfile
+#	@echo "Pushed dev image to: $(CI_DEV_DOCKER_NAMESPACE)/$(CI_DEV_DOCKER_IMAGE_NAME):$(GIT_COMMIT)"
+#ifeq ($(GITHUB_REF_NAME), main)
+#	@docker buildx build -t '$(CI_DEV_DOCKER_NAMESPACE)/$(CI_DEV_DOCKER_IMAGE_NAME):latest' \
+#	--platform linux/amd64,linux/arm64 \
+#	--target=dev \
+#	--push \
+#	--label COMMIT_SHA=$(GITHUB_SHA) \
+#	--label PULL_REQUEST=$(GITHIB_PULL_REQUEST) \
+#	--label GITHUB_BUILD_URL=$(GITHUB_SERVER_URL)/$(GITHUB_REPOSITORY)/actions/runs/$(GITHUB_RUN_ID) \
+#	$(CI_DEV_DOCKER_WORKDIR) -f $(CURDIR)/Dockerfile
+#	@echo "Pushed dev image to: $(CI_DEV_DOCKER_NAMESPACE)/$(CI_DEV_DOCKER_IMAGE_NAME):latest"
+#endif
 
 .PHONY: ci.dev-tree ci.dev-docker ci.dev-docker-github
