--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -299,7 +299,7 @@ jobs:
  # to be available in the summer of 2022. For now, run the dev-upload docker and acceptance tests in CircleCI
   dev-upload-docker:
     if: github.repository_owner == 'hashicorp' # Do not run on forks as this requires secrets
-    needs: build-distros
+    needs: [get-product-version, build-distros]
     runs-on: ubuntu-latest
     strategy:
       matrix:
