--- a/.github/workflows/reusable-acceptance.yml
+++ b/.github/workflows/reusable-acceptance.yml
@@ -44,9 +44,9 @@ jobs:
         include: # I am really sorry for this but I could not find a way to automatically split our tests into several runners. For now, split manually.
           - {runner: "0", test-packages: "basic connect consul-dns"}
           - {runner: "1", test-packages: "controller example ingress-gateway"}
-          - {runner: "2", test-packages: "mesh-gateway metrics"}
-          - {runner: "3", test-packages: "partitions sync terminating-gateway"}
-          - {runner: "4", test-packages: "vault"}
+          - {runner: "2", test-packages: "metrics partitions peering"}
+          - {runner: "3", test-packages: "snapshot-agent sync terminating-gateway"}
+          - {runner: "4", test-packages: "vault wan-federation"}
 
       fail-fast: true
     steps:      
